# sql_lab

./: README.md  pyproject.toml
json_logic/: builder.py  operators.py  resolver.py  sql.py
larkparser/: kvjson.py  nodes.py  parser.py
sqldsl/: __init__.py  builder.py  jsonschema.py  schemas.py
sqlengine/: __init__.py  parser.py  parser_sqlglot.py  sqlparser.py
tests/: test_lark.py  test_pyparsing.py  test_sql.py  test_sqlglot.py  test_xml.py
xmlsample/: README.md  aaa.xsd  xmlschemas.dtd
