[tool.poetry]
name = "sqlsuper"
version = "0.0.2"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/asy"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.*"
pydantic = "^1.9.0"
lxml = "^4.8.0"
sqlparse = "^0.4.2"
pyparsing = "^3.0.7"
mo-sql-parsing = "^8.145.22062"
sqlglot = "^1.26.1"
psycopg2-binary = "^2.9.3"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
